[package]
name = "gat-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono = { version = "^0.4.1", features = ["serde", "rustc-serialize"] } 
serde = { version = "^1.0", features = ["derive"] } 
firestore = "0.30.3"
futures = "0.3.27"
gcloud-sdk = "0.19.18"
tokio-postgres = {version = "0.7.7", features=["with-chrono-0_4"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }


[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]